footer bolimiga xush keldik

--- a/index.html
+++ b/index.html
@@ -177,7 +177,31 @@
             </div>
         </section>
 
-        
+        <section class="section7">
+            <div class="container">
+                <div class="section7-container">
+                    <form action="">
+
+                        <h3>Malumotingizni qoldiring</h3>
+                        <input class="ism" type="ism" placeholder="Ism">
+                        <input class="number" type="number" placeholder="+998">
+                        
+
+                        <label for="">
+                            <input type="checkbox" name="skills" value="Maxfiylik siyosati">
+                            Maxfiylik siyosati
+                        </label>
+                        <button>Yozilish</button>
+                    </form>
+
+                    <div class="section7-ishonch">
+                        <h4>Bizga ko'p yillardan beri  kompaniyamizga ishonch bildirganlar talaygina</h4>
+                        <img src="./img/person-in-white-chemical-protection-suit-holding-sprayer-with-disinfectant-chemicals-to-stop-spreading-highly-contagious-virus_342744-937-removebg-preview 1.png" alt="86589">
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
