--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 </head>
 <body>
     <header class="header">
@@ -203,5 +203,46 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-container">
+                 <div class="footer-dizenfeksiya-malumotlari">
+                    <img src="./img/Union.png" alt="gfdcx">
+                <h2>Dizenfeksiya</h2>
+                 </div>
+             
+            <div class="footer-lakatsiya">
+                <div class="footer-yashnabod">
+                     <i class="fa-solid fa-location-dot"></i>
+                <p>Toshkent shahri  Yashnabod tumani  Mo’ljal Sergeli-4 bekat</p>
+                <img src="./img/Vector 69.png" alt="fghjk">
+                </div>
+
+                <div class="footer-raqam">
+                    <i class="fa-solid fa-phone"></i>
+                    <p>+998 94 099 3434</p>
+                    <img src="./img/Vector 69.png" alt="dvfde">
+                </div>
+
+                <div class="footer-tarmoqlar">
+                    <div class="Facebook">
+                        <p>Facebook</p>
+                        <img src="./img/Vector 69.png" alt="dcxcc">
+                    </div>
+                    <div class="Instagram">
+                        <p>Instagram</p>
+                        <img src="./img/Vector 69.png" alt="56332">
+                    </div>
+                    <div class="Telegram">
+                        <p>Telegram</p>
+                        <img src="./img/Vector 69.png" alt="dxsda">
+                    </div>
+                    
+                </div>
+            </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
