footer va animatsiyalar tayyor

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
+    
     <header class="header">
         <div class="container">
-            <div class="header-container">
+            <div data-aos="fade-up"
+     data-aos-anchor-placement="bottom-bottom" class="header-container">
                 <div class="header-dizenfeksiya">
                     <img src="./img/Union.png" alt="589658">
                     <h2>Dizenfeksiya</h2>
@@ -35,7 +38,7 @@
         <section class="section1">
             <div class="container">
                 <div class="section1-container">
-                    <div class="section1-dizenfeksiya-xizmati">
+                    <div data-aos="zoom-in" class="section1-dizenfeksiya-xizmati">
                         <h1>Dizenfeksiya xizmati </h1>
                         <p>Bizning ko’p yillardan beri o’z faoliyatini olib kelayotgan kompaniyamiz Mijozlarimiz bizdan mamnun</p>
                         <div class="dumaloq">
@@ -51,7 +54,7 @@
                             <img class="strelka" src="./img/Vector 5.png" alt="sxcsdax">
                         </div>
                     </div>
-                    <img class="kovit" src="./img/WnYJyJjWq3U 1.png" alt="dfgh">
+                    <img  data-aos="zoom-in-left" class="kovit" src="./img/WnYJyJjWq3U 1.png" alt="dfgh">
                 </div>
             </div>
         </section>
@@ -59,21 +62,21 @@
         <section class="section2">
             <div class="container">
                 <div class="section2-container">
-                    <h3>Avfzalliklarimiz</h3>
+                    <h3 data-aos="flip-up">Avfzalliklarimiz</h3>
                     <div class="section2-Avfzalliklarimiz">
-                        <div class="Tezda-xizmat-korsatish">
+                        <div data-aos="zoom-out-up"  class="Tezda-xizmat-korsatish">
                             <img src="./img/Mask group (14).png" alt="">
                             <h2>Tezda xizmat ko’rsatish</h2>
                             <p>Bizning ko’p yillardan beri o’z faoliyatini olib kelayotgan kompaniyamiz Mijozlarimiz bizdan mamnun</p>
                         </div>
 
-                        <div class="Yetuk-mutahasislaimiz">
+                        <div data-aos="flip-left" class="Yetuk-mutahasislaimiz">
                             <img src="./img/Mask group (15).png" alt="">
                             <h2>Yetuk mutahasislaimiz</h2>
                             <p>Bizning ko’p yillardan beri o’z faoliyatini olib kelayotgan kompaniyamiz Mijozlarimiz bizdan mamnun</p>
                         </div>
 
-                        <div class="Sizga-maqul-vaqtda">
+                        <div data-aos="zoom-out" class="Sizga-maqul-vaqtda">
                             <img src="./img/Mask group (16).png" alt="">
                             <h2>Sizga maqul vaqtda</h2>
                             <p>Bizning ko’p yillardan beri o’z faoliyatini olib kelayotgan kompaniyamiz Mijozlarimiz bizdan mamnun</p>
@@ -86,7 +89,7 @@
         <section class="section3">
             <div class="container">
                 <div class="section3-container">
-                     <div class="hashorat">
+                     <div data-aos="zoom-in-up" class="hashorat">
                         <h3>Klapa va zararli hashorot endi yo’q deb hisoblang !!!</h3>
                     <p>Bizning ko’p yillardan beri o’z faoliyatini olib kelayotgan kompaniyamiz Mijozlarimiz bizdan mamnun</p>
                   <button class="btn liquid">
@@ -100,32 +103,33 @@
 
         <section class="section4">
             <div class="container">
-                <div class="section-container">
+                <div data-aos="fade-up"
+     data-aos-duration="3000" class="section-container">
                     <h4>Service</h4>
                     <p>Bu darsliklari sizning yuqori daraja olishingizga yordam beradi</p>
                 </div>
                 <div class="section4-cards">
-                    <div class="card">
+                    <div data-aos="flip-left" class="card">
                         <h2>Boshlang’ich tushunchalar</h2>
                         <p class="nazariy">nazariy bilimlar</p>
                         <p class="dars">16 dars</p>
                         <img src="./img/Group (7).png" alt="5632">
                     </div>
 
-                    <div class="card1">
+                    <div data-aos="flip-down" class="card1">
                         <h2>O’rta</h2>
                         <p class="nazariy">nazariy va Amaliy bilimlar</p>
                         <p class="dars">23 dars</p>
                         <img src="./img/Group (8).png" alt="5632">
                     </div>
 
-                    <div class="card2">
+                    <div data-aos="flip-right"  class="card2">
                         <h2>Yuqori</h2>
                         <p class="nazariy">Amaliy bilimlar</p>
                         <p class="dars">16 dars</p>
                         <img src="./img/Group (9).png" alt="5632">
                     </div>
-
+   
                 </div>
             </div>
         </section>
@@ -133,8 +137,8 @@
         <section class="section5">
             <div class="container">
                 <div class="section5-container">
-                    <img class="obraz" src="./img/obrazovaniye_s 2.png" alt="sdcfv">
-                    <div class="section5-bizda">
+                    <img data-aos="zoom-in" class="obraz" src="./img/obrazovaniye_s 2.png" alt="sdcfv">
+                    <div data-aos="zoom-out" class="section5-bizda">
                         <img src="./img/3dicons.png" alt="65668">
                         <h5>Bizga ko'p yillardan beri  kompaniyamizga ishonch bildirganlar talaygina</h5>
                         <button class="btn neon-pulse">
@@ -147,7 +151,9 @@
 
         <section class="section6">
             <div class="container">
-                <div class="section6-container">
+                <div data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500" class="section6-container">
                     <div class="faq">
                         <h2>FAQ</h2>
                     </div>
@@ -180,7 +186,8 @@
         <section class="section7">
             <div class="container">
                 <div class="section7-container">
-                    <form action="">
+                    <form data-aos="fade-up"
+     data-aos-duration="3000" action="">
 
                         <h3>Malumotingizni qoldiring</h3>
                         <input class="ism" type="ism" placeholder="Ism">
@@ -194,7 +201,7 @@
                         <button>Yozilish</button>
                     </form>
 
-                    <div class="section7-ishonch">
+                    <div data-aos="zoom-in-left" class="section7-ishonch">
                         <h4>Bizga ko'p yillardan beri  kompaniyamizga ishonch bildirganlar talaygina</h4>
                         <img src="./img/person-in-white-chemical-protection-suit-holding-sprayer-with-disinfectant-chemicals-to-stop-spreading-highly-contagious-virus_342744-937-removebg-preview 1.png" alt="86589">
 
@@ -206,7 +213,10 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-container">
+            <div data-aos="fade-zoom-in"
+     data-aos-easing="ease-in-back"
+     data-aos-delay="300"
+     data-aos-offset="0" class="footer-container">
                  <div class="footer-dizenfeksiya-malumotlari">
                     <img src="./img/Union.png" alt="gfdcx">
                 <h2>Dizenfeksiya</h2>
@@ -216,13 +226,13 @@
                 <div class="footer-yashnabod">
                      <i class="fa-solid fa-location-dot"></i>
                 <p>Toshkent shahri  Yashnabod tumani  Mo’ljal Sergeli-4 bekat</p>
-                <img src="./img/Vector 69.png" alt="fghjk">
+                <img class="vector" src="./img/Vector 69.png" alt="fghjk">
                 </div>
 
                 <div class="footer-raqam">
                     <i class="fa-solid fa-phone"></i>
                     <p>+998 94 099 3434</p>
-                    <img src="./img/Vector 69.png" alt="dvfde">
+                    <img class="vector" src="./img/Vector 69.png" alt="dvfde">
                 </div>
 
                 <div class="footer-tarmoqlar">
@@ -244,5 +254,14 @@
             </div>
         </div>
     </footer>
+
+
+
+
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+  AOS.init();
+  </script>
 </body>
 </html>
